--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.6.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
